--- a/05-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/05-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -2,10 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>ThymeLeaf Demo</title>
-    <link rel="stylesheet" th:href="@{/css/demo.css}">
+    <title>Hello World input form</title>
 </head>
 <body>
-    <p th:text="'Time on the server is ' +  ${theDate}" class="funny"/>
+Hello world of Spring !!!!!!!
+<br><br>
+
+Student name : <span th:text="${param.studentName}"/>
 </body>
 </html>
